k8s/dev/api.yml

# template to define backend pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democart-backend-deployment
  namespace: dev
spec:
  selector:
    matchLabels:
      app: democart-backend
      #tier: backend
  template:
    metadata:
      labels:
        app: democart-backend
        #tier: backend
    spec:
      # to copy minikube hosts /etc/hosts to each pod (so that
      # api.helloworld.info can be resolved from within the pods)
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: democart-backend-docker
        image: "samolds/democart-api:latest"
        command: ["/usr/local/bin/entrypoint.sh", "/usr/local/bin/democart"]
        args: ["--configs", "/etc/config/democart_backend/config.hcl,/etc/config/democart_backend/secrets.hcl"]
        ports:
        - containerPort: 8080
          name: api
        - containerPort: 8081
          name: idp
        - containerPort: 8082
          name: metrics
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 2
            memory: 200Mi
        livenessProbe: # TODO(sam): review this
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 200
          periodSeconds: 30
          timeoutSeconds: 15
        readinessProbe: # TODO(sam): review this
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 10
        volumeMounts:
        - name: democart-backend-config
          mountPath: /etc/config/democart_backend
          readOnly: true
      volumes:
      - name: democart-backend-config
        projected:
          sources:
          - configMap:
              name: democart-backend-configmap
          - secret:
              name: democart-backend-secret
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: # TODO(sam): review this
      maxSurge: 3
      maxUnavailable: 0

---

# abstraction to expose backend pods
apiVersion: v1
kind: Service
metadata:
  name: democart-backend-service
  namespace: dev
spec:
  selector:
    app: democart-backend
  type: LoadBalancer
  ports:
  - name: api
    port: 8000 # the exposed port picked up by the ingress
    targetPort: 8080 # containerPort. where the container is listening
    protocol: TCP
  - name: idp
    port: 8001
    targetPort: 8081
    protocol: TCP
  - name: metrics
    port: 8002
    targetPort: 8082
    protocol: TCP


## unavailable with minikube
#---
#
## service to dynamically scale backend pods
#apiVersion: autoscaling/v1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: democart-backend-autoscaler
#  namespace: dev
#spec:
#  maxReplicas: 3
#  minReplicas: 1
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: democart-backend-deployment
#  targetCPUUtilizationPercentage: 90
