k8s/dev/db.yml

# a deployment for the databse (normally, this WOULD NOT live within the k8s
# cluster. it would be it's own separate thing and only a database service
# would be defined to communicate with an external service)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shipyard-db-statefulset
  namespace: dev
  labels:
    app: shipyard-db
spec:
  serviceName: shipyard-db
  replicas: 1
  selector:
    matchLabels:
      app: shipyard-db
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: shipyard-db
    spec:
      containers:
      - name: shipyard-db-docker
        image: postgres:11
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: shipyard-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: shipyard-persistent-storage
        persistentVolumeClaim:
          claimName: shipyard-db-persistentvolumeclaim

---

# abstraction to expose database pod
apiVersion: v1
kind: Service
metadata:
  name: shipyard-db-service
  namespace: dev
  labels:
    app: shipyard-db
spec:
  selector:
    app: shipyard-db
  # db is only available within the cluster
  type: ClusterIP
  ports:
  - name: http
    port: 5432 # the exposed port
    targetPort: 5432 # the port within the container psql is listening on
    protocol: TCP
