k8s/dev/prometheus.yml

# template to define backend prometheus pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipyard-prometheus-deployment
  namespace: dev
spec:
  selector:
    matchLabels:
      app: shipyard-prometheus
  template:
    metadata:
      labels:
        app: shipyard-prometheus
    spec:
      containers:
      - name: shipyard-prometheus-docker
        image: prom/prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: shipyard-prometheus-config
          mountPath: /etc/prometheus/
          readOnly: true
      volumes:
      - name: shipyard-prometheus-config
        projected:
          sources:
          - configMap:
             name: shipyard-prometheus-configmap
  replicas: 1

---

# abstraction to expose backend prometheus pods
apiVersion: v1
kind: Service
metadata:
  name: shipyard-prometheus-service
  namespace: dev
spec:
  selector:
    app: shipyard-prometheus
  type: LoadBalancer
  ports:
  - name: http
    port: 9000
    targetPort: 9090
    protocol: TCP
