k8s/dev/web.yml

# template to define frontend pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democart-frontend-deployment
  namespace: dev
spec:
  selector:
    matchLabels:
      app: democart-frontend
      #tier: frontend
  template:
    metadata:
      labels:
        app: democart-frontend
        #tier: frontend
    spec:
      containers:
      - name: democart-frontend-docker
        image: "samolds/democart-web:latest"
        ports:
        - containerPort: 80 # the port the container is listening on
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: # TODO(sam): review this
      maxSurge: 3
      maxUnavailable: 0

---

# abstraction to expose frontend pods
apiVersion: v1
kind: Service
metadata:
  name: democart-frontend-service
  namespace: dev
spec:
  selector:
    app: democart-frontend
  type: LoadBalancer
  ports:
  - name: http
    port: 3000 # the exposed port
    targetPort: 80 # the port the container is listening on
    protocol: TCP


## unavailable with minikube
#---
#
## service to dynamically scale frontend pods
#apiVersion: autoscaling/v1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: democart-frontend-autoscaler
#  namespace: dev
#spec:
#  maxReplicas: 3
#  minReplicas: 1
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: democart-frontend-deployment
#  targetCPUUtilizationPercentage: 90
